# subscription-killer-api-benchmark

./: .env.example  .gitignore  .gitmodules  LOCAL-DEVELOPMENT.md  MAKEFILE_USAGE.md  Makefile  README.md  _config.yml  build-mock-server.sh  env.example  pom.xml  pyproject.toml  requirements.txt  run-ai-benchmark.sh  run-local-benchmark.sh  subscription-killer-benchmark.code-workspace
.github/workflows/: benchmark-data-processing.yml  benchmark-release.yml  benchmark-test.yml  benchmark-trigger.yml  benchmark.yml  debug-trigger.yml  dev-create-mock-artifact.yml  dev-test-benchmark-release.yml  dev-test-present-benchmark-result.yml  present-benchmark-result.yml  push-gmail-mock-server.yml  (+2 more)
data-storage/: README.md
scripts/: README-view-traces.md  benchmarkUtils.py  build-langfuse-exporter.sh  build-mock-server.sh  create_initial_benchmark_report.py  dataUtils.py  debug-traces.sh  debug-trigger.sh  download_benchmark_data.py  markdownUtils.py  run_gmail_mock_server.sh  sync_hf_data.py  test-add-column.sh  test-benchmark-workflow.sh  test_gmail_mock_server.sh  test_gmail_mock_server_container.sh  trace_ai_benchmark_comparison.py  trace_analyzer.py  trace_parser.py  trace_statistics.py  view-traces.sh
scripts/gmail_mock_server/: .dockerignore  Dockerfile  Makefile  config.py  logging_config.py  mock_server.py  models.py  pyproject.toml  requirements.txt  state.py
scripts/gmail_mock_server/services/: message_selector.py
scripts/gmail_mock_server/tests/: test_docker.py  test_message_selector.py  test_mock_server.py
scripts/gmail_mock_server/utils/: __init__.py  data_utils.py
(+170 files in other folders)
