[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-mock-server"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
    "huggingface_hub>=0.19.0",
]

[tool.setuptools.packages.find]
where = ["."]
# Ensure both the app and the mirrored dataset are treated as packages
include = ["app*", "dataset*"]

[tool.pyright]
extraPaths = ["dataset/src", "dataset/tests"]
executionEnvironments = [
  { root = "." },
  { root = "dataset", extraPaths = ["src","tests"] }
]

[tool.setuptools]
# Ensures the dataset folder is recognized during 'pip install .'
package-dir = {"" = "."}